--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,14 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  width: 100%;
+  min-height: 100vh;
+}
+progress::-webkit-progress-bar {
+  background-color: rgb(235, 229, 229);
+  border-radius: 45px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+progress::-webkit-progress-value {
+  border-radius: 10px;
 }
